fix spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,7 +52,7 @@ p {
 /* override ui kit styles */
 /* buttons */
 .uk-button {
-    font-size: 1vw;
+    font-size: inherit;
 }
 .uk-button-default {
     padding: 5px 15px;
@@ -69,7 +69,6 @@ p {
 .uk-button-text {
     font-family: 'Nunito Sans', sans-serif;
     font-size: 1vw;
-    text-decoration: none;
     color: var(--light-text-color);
     font-weight: 400;
     opacity: .5;
@@ -83,6 +82,7 @@ p {
 /* cards */
 .uk-card {
     border-radius: 4px;
+    opacity: 0.8;
 }
 /* containers */
 .uk-container-expand {
@@ -140,8 +140,8 @@ ul.uk-navbar-nav li.uk-active a{
 .hero-subtitle {
     color: var(--dark-text-color);
 }
-.hero .uk-button-default{
-    width: 25%;
+.hero-buttons {
+    width: 50%;
 }
 /* hero styles end */
 
@@ -151,6 +151,9 @@ ul.uk-navbar-nav li.uk-active a{
 }
 .grid-stat-values p {
     text-align: right;
+}
+.stats {
+    margin: auto;
 }
 /* stats styles end */
 
@@ -284,7 +287,7 @@ html, body {
     h3 {
         font-size: 5vw;
     }
-    p {
+    p, .uk-button-text {
         font-size: 3vw;
     }
     .uk-card {
@@ -292,6 +295,10 @@ html, body {
     }
     .uk-flex {
         flex-direction: column;
+        align-items: center;
+    }
+    .hero-buttons {
+        width: 75%;
     }
     .uk-container {
         margin: 0px;
@@ -319,7 +326,13 @@ html, body {
     h3 {
         font-size: 7.5vw;
     }
-    p {
+    p, .uk-button-text {
         font-size: 5vw;
+    }
+    .hero-buttons {
+        width: 100%;
+    }
+    #homeLink{
+        display: none;
     }
 }
